--- a/viewer/index.html
+++ b/viewer/index.html
@@ -40,8 +40,7 @@
         <option value="Oldest">Oldest</option>
     </select>
 
-    <span id="total">Total: 0</span>
-    <span id="showing">Showing: 0</span>
+    <span id="results">Results: 0</span>
 
 </form>
 
